--- a/cv.tex
+++ b/cv.tex
@@ -29,9 +29,10 @@
 \titlespacing{\section}{0pt}{3pt}{3pt} % Spacing around sections
 
 % Custom arrangement for the columns
-\usepackage[margin=2cm]{geometry}
+\usepackage[margin=2cm, lmargin=1cm, rmargin=1cm]{geometry}
 \usepackage{array}
 
+% For left margin removal in itemize
 \usepackage{enumitem}
 
 \begin{document}
@@ -81,7 +82,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Education}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}p{12cm}r}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}r}
 
     \textsc{Current} & B. Tech in \textsc{Computer Science and Engineering} &   9.6/10.0\\
                      & \textbf{Indian Institute of Technology}, Kanpur\\
@@ -99,7 +100,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Scholarships and Conferences}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{15cm}}
 
     \textsc{Jan 2011} & Kishore Vaigyanik Protsahan Yojana (KVPY) Fellowship \\
     \textsc{Dec 2008} & FIITJEE Talent Reward Examination Scholarship \\
@@ -113,7 +114,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Scholastic Achievements}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{15cm}}
 
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
@@ -137,7 +138,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Skill Set}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{15cm}}
 
     \textsc{Languages} %
             & \textbf{C}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
@@ -155,7 +156,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section{Work Experience}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{May-Jul 2014} & Research Intern at \textsc{Microsoft Research India}, Bangalore
                             \footnotesize{
                                 \begin{itemize}[leftmargin=*]
@@ -169,7 +170,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             }\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{May-Jul 2013} & Software Development at \textsc{Aurus Networks'}, Bangalore
                             \footnotesize{
                                 \begin{itemize}[leftmargin=*]
@@ -188,7 +189,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Course Projects}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Spring 2014} & JavaScript to MIPS Compiler, \textsc{\raggedright Compilers} \\
                          & \footnotesize{An end-to-end compiler for a subset of ECMAScript5.1
                             which compiled to MIPS was implemented in Python. No runtime support
@@ -197,7 +198,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/javascript-compiler} {[Git Repo]}} \\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Spring 2014} & Hindi author attribution, \textsc{\raggedright Artificial Intelligence} \\
                          & \footnotesize{The first half of this project was a multi-class clustering problem,
                             wherein authors were to be clustered according to their writing style.
@@ -209,7 +210,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/author-attribution} {[Git Repo]}}\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Fall 2013} & NachOS, \textsc{Operating Systems} \\
                        & \footnotesize{The coursework included implementation of system calls; process
                           management and scheduling; memory management schemes and page replacement
@@ -217,7 +218,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                           the professor-in-charge}\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Fall 2013} & P2P File Sharing and Streaming, \textsc{Computer Networks} \\
                        & \footnotesize{A Node.js based local file server and media playback server was implemented
                           to understand the underpinnings of Transport Layer Protocols, socket programming,
@@ -225,27 +226,27 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                           \href{https://github.com/srijanshetty/nodesock} {[Git Repo]}}\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Fall 2013} & IP Spoofing, \textsc{Computer Networks} \\
                        & \footnotesize{Under the guidance of \textbf{Professor Dheeraj Sanghi}, different methodologies
                           of spoofing IP addresses and different uses of spoofing IPs were implemented and tested
                           in a secure environment.}\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Fall 2013} & Metro Travel Plan(Prolog), \textsc{Principles of Programming Languages} \\
                        & \footnotesize{Implementation of shortest paths in Prolog on the Delhi Metro route.
                           The professor-in-charge was \textbf{Professor P. Kurur}}\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Fall 2013} & Erlang Traffic Server, \textsc{Principles of Programming Languages} \\
                        & \footnotesize{A simple traffic server implemented in Erlang using message passing
                           concurrency and tail call recursion functional aspects of the language under the
                           guidance of \textbf{Professor P. Kurur}}\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Spring 2013} & 8-bit General Purpose Computer on a FPGA, \textsc{Computer Organization} \\
                          & \footnotesize{The GPC had a load-store architecture and was written in System Verilog and
                             implemented on a \textbf{Xilinx Spartan 3 FPGA}.  The project was under the
@@ -255,7 +256,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/220_y11} {[Git Repo]}} \\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Spring 2013} & Conference Dates Web Crawler, \textsc{Computing Laboratory} \\
                          & \footnotesize{A python based web crawler which could obtain paper submission
                             deadlines of a provided conference name.  BeautifulSoup and urllib along
@@ -263,7 +264,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                             \href{https://github.com/srijanshetty/crawler} {[Git Repo]} } \\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Fall 2011} & "No situation is unique and certain moral principles can be applied across all situation",
                          \textsc{Introduction to Philosophy} \\
                        & \footnotesize{ An argumentative discourse proving that certain moral principles
@@ -277,7 +278,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 %----------------------------------------------------------------------------------------
 \section{Side Projects}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{July 2014} & OARS\\
                        & \footnotesize{OARS is a \textbf{AngularJS} based front-end for the
                           courses offered in IIT Kanpur. It was created as a
@@ -289,7 +290,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{March 2014} & GYPH\\
                         & \footnotesize{GYPH or Get Your Personal Homepage
                            is a simple hassle-free homepage designer for students who are not
@@ -298,22 +299,22 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                            \href{http://gyph2.herokuapp.com/} {[Website]} } \\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{August 2013} & ShuffleRun\\
                          & \footnotesize{A hack for Yahoo HackU. ShuffleRun is a
                             web based music player which selects a track from the users library according to her running speed.
                             \href{https://github.com/srijanshetty/ShuffleRun} {[Git Repo]}}\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{July 2013} & \href{www.udghosh.org}{Website of Udghosh}, the annual sports-fest of IIT Kanpur\\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Dec 2012} & \href{http://www.iitk.ac.in/hall5}{Website of Hall 5}, IIT Kanpur \\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Summer 2012} & Voicing, Archiving and Networking the Information \textsc{(VANI)}, IIT Kanpur\\
                            & \footnotesize{Vani is an \textbf{extensible} platform
                               made for the campus community consisting of Wiki, Forums,
@@ -322,7 +323,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                               \textbf{Professor T. V. Prabhakar} } \\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Summer 2012} & GNU/Linux Exploration, Programming Club, IIT Kanpur\\
                            & \footnotesize{ The project involved exploration of various facets of
                              \textbf{GNU/Linux} like the file system, process management,
@@ -332,16 +333,20 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                              {[Documentation]} } \\
 \end{tabular}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}|p{14cm}}
-    \textsc{July 2013} & Projects on Github \\
-                       & \footnotesize{\textbf{Dotfiles}: an opinionated work flow on Linux Systems.
-                         \href{https://github.com/srijanshetty/dotfiles} {[Git Repo]} } \\
-                       & \footnotesize{\textbf{Prezto}: a fork of the Prezto ZSH framework
-                          \href{https://github.com/srijanshetty/prezto} {[Git Repo]}} \\
-                       & \footnotesize {\textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework
-                          \href{https://github.com/srijanshetty/oh-my-zsh} {[Git Repo]} } \\
-                       & \footnotesize{\textbf{DS}: implementation of certain algorithms and data structures
-                          \href{https://github.com/srijanshetty/DS} {[Git Repo]}} \\
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
+    \textsc{July 2013} & Projects on Github
+                         \footnotesize{
+                             \begin{itemize}[leftmargin=*]
+                                 \item \textbf{Dotfiles}: an opinionated work flow on Linux Systems.
+                                     \href{https://github.com/srijanshetty/dotfiles} {[Git Repo]}
+                                 \item \textbf{Prezto}: a fork of the Prezto ZSH framework
+                                     \href{https://github.com/srijanshetty/prezto} {[Git Repo]}
+                                 \item \textbf{oh-my-zsh}: a fork of the oh-my-zsh ZSH framework
+                                     \href{https://github.com/srijanshetty/oh-my-zsh} {[Git Repo]}
+                                 \item \textbf{DS}: implementation of certain algorithms and data structures
+                                     \href{https://github.com/srijanshetty/DS} {[Git Repo]}
+                             \end{itemize}
+                         }\\
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -350,19 +355,19 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \section {Social, Leadership and Artistic Skills}
 
-\begin{tabular}{>{\raggedleft}p{2.2cm}p{14cm}}
+\begin{tabular}{>{\raggedleft}p{2.2cm}p{15cm}}
 
-    --   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
+    ---   & Active blogger at \href{srijanshetty.quora.com} {srijanshetty.quora.com} \\
 
-    --    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}
-           \footnotesize{
-               \begin{itemize}[leftmargin=*]
-                   \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
-                   \item Promoted the FOSS initiative by giving student lectures.
-                   \item Worked on student-centred projects like Course Search and Student Search.
-                   \item \href{https://github.com/navya} {[Git Repo]}
-               \end{itemize}
-           }\\
+    2013-2014    & \textbf{Hacker, Navya, FOSS Group IIT Kanpur}
+                   \footnotesize{
+                       \begin{itemize}[leftmargin=*]
+                           \item Navya is the resident Free and Open Source Software Group of IIT Kanpur.
+                           \item Promoted the FOSS initiative by giving student lectures.
+                               And worked on student-centred projects like Course Search and Student Search.
+                               \href{https://github.com/navya} {[Git Repo]}
+                       \end{itemize}
+                   }\\
 
     2013-2014    & \textbf{Volunteer, English Proficiency Programme}
                    \footnotesize{
@@ -396,8 +401,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                    \item The GRC was established to revamp the Students' Gymkhana of IIT Kanpur,
                        which is responsible for all the student activities of the institute.
                    \item I chaired the sessions on \textbf{Extended Orientation of Freshmen}.
-                   \item Additionally, I gave inputs to other academic, senate and activities sub-committees formed
-                       under the GRC.
+                       And gave inputs to other academic, senate and activities sub-committees formed under the GRC.
                \end{itemize}
            }\\
 
