Information about NCO, NSO and Debate

--- a/cv.tex
+++ b/cv.tex
@@ -130,6 +130,8 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     \textsc{Dec 2005}    & Awarded \textbf{Overall Best Student} for displaying all round excellence. \\
     \textsc{2000 -- 2009} & Recipient of \textbf{Scholastic Excellence} awards for exemplary academic
                            performance throughout 2nd to 12th grade. \\
+    \textsc{---} & Secured AIR \textbf{140 in 8th, 154 in 9th and 429 in 11th} National Cyber Olympaid.\\
+    \textsc{---} & Secured AIR \textbf{54 in 9th} National Science Olympaid.\\
 
 \end{tabular}
 
@@ -167,7 +169,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                                     \item Performed \textbf{failure testing and performance testing}
                                         of the concurrency optimizations in real world scenarios.
                                 \end{itemize}
-                            }\\
+                            }
 \end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
@@ -181,7 +183,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                                       \item Developed a \textbf{XMPP} based \textbf{real-time chat service} for
                                           conversations during live lectures.
                                 \end{itemize}
-                            }\\
+                            }
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
@@ -410,6 +412,8 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     2012 & \textbf{Secretary, English Literary Society}. \\
 
     2010 & Basic training in \textbf{Indian Classical Music}. (Prayag Sangeet Samiti Allahabad). \\
+
+    2009 & Qualified for the semi-finals of \textbf{Outlook SpeakOut Debate}. \\
 
 \end{tabular}
 
