--- a/cv.tex
+++ b/cv.tex
@@ -119,7 +119,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{Fall 2012}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
-                         & \footnotesize{Tutored a batch of four students in ESC101 --- a core course on
+                         & \footnotesize{Tutored a batch of students in ESC101 --- a core course on
                             basic concepts of programming --- the instructor-in-charge was \textbf{Professor
                             Sumit Ganguly}}\\
     \textsc{Jan 2010}    & Qualified for \textbf{Indian National Mathematics Olympaid} (INMO) \\
@@ -143,7 +143,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \begin{tabular}{>{\raggedleft}p{2.2cm}p{15cm}}
 
     \textsc{Languages} %
-            & \textbf{C}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
+            & \textbf{C\#}, \textbf{C++},\textbf{Python}, \textbf{JavaScript} \\
     \textsc{Web Dev} %
             & \textbf{HTML5}, \textbf{CSS}, \textbf{JavaScript}, \textbf{Flash}, \textbf{SQL},
               \textbf{AngularJS}, \textbf{Nodejs}, \textbf{NoSQL}\\
@@ -187,9 +187,17 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 \end{tabular}
 
 %----------------------------------------------------------------------------------------
-%  COURSE PROJECTS
+%  PROJECTS
 %----------------------------------------------------------------------------------------
-\section{Course Projects}
+\section{Projects}
+
+\begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
+    \textsc{Fall 2014} & Multi Factor Authentication in OpenVPN, \textsc{\raggedright Mozilla Winter of Security} \\
+                         & \footnotesize{This project was one of the eleven
+                            projects selected for Mozilla Winter of Security's 2014 edition. Under the
+                            guidance of \textbf{Guillaume Destuynder} and \textbf{Professor Dheeraj Sanghi},
+                            the project aims to add true multi factor authentication support to OpenVPN.} \\
+\end{tabular}
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{Spring 2014} & JavaScript to MIPS Compiler, \textsc{\raggedright Compilers} \\
@@ -303,8 +311,9 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}|p{15cm}}
     \textsc{August 2013} & ShuffleRun\\
-                         & \footnotesize{A hack for Yahoo HackU. ShuffleRun is a
-                            web based music player which selects a track from the users library according to her running speed.
+                         & \footnotesize{ShuffleRun is a web based music player which selects a track from the
+                            users library according to her running speed.
+                            The project recieved an honorable mention in \textbf{Yahoo!  HackU 2013} IIT Kanpur round.
                             \href{https://github.com/srijanshetty/ShuffleRun} {[Git Repo]}}\\
 \end{tabular}
 
@@ -421,15 +430,15 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \begin{tabular}{>{\raggedleft}p{8cm}|p{8cm}}
 
-    Computer Organization (CS220) & Operating Systems (CS330) \\
-    Compilers (CS335) & Computer Networks (CS425) \\
-    Theory of Computation (CS3) & Computing Laboratory (CS251 \& CS252)\\
-    Discreet Mathematics (CS201) & Logic for Computer Science (CS202A)\\
-    Data Structure and Algorithms (CS210) & Design and Analysis of Algorithms (CS345)\\
-    Principles of Programming Languages (CS350) & Computer and Internet Security (CS628)\\
-    Artificial Intelligence (CS365) & Abstract Algebra (CS202B)\\
-    Linear Algebra (MTH102) & Computational Methods in Engineering (ESO208A)\\
-    Multivariate Calculus (MTH101) & Technical Communication(CS300)\\
+    Theory of Computation (CS340) & (CS201) Discreet Mathematics \\
+    Abstract Algebra (CS203A) & (CS202A) Logic for Computer Science \\
+    Data Structure and Algorithms (CS210) & (CS345) Design and Analysis of Algorithms \\
+    Operating Systems (CS330) & (CS335) Compilers \\
+    Computer Networks (CS425) &  (CS628) Computer and Internet Security \\
+    Computer Organization (CS220) & (CS350) Principles of Programming Languages \\
+    Artificial Intelligence (CS365) & (CS251 \& CS252) Computing Laboratory \\
+    Computational Methods in Engineering (ESO208A) & (CS300) Technical Communication \\
+    Linear Algebra (MTH102) &  (MTH101) Multivariate Calculus \\
                      \\
 \end{tabular}
 \end{document}
