--- a/cv.tex
+++ b/cv.tex
@@ -116,6 +116,17 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
 
 \begin{tabular}{>{\raggedleft}p{2.2cm}p{15cm}}
 
+    \textsc{2011-2014}   & Recieved an \textbf{A* grade}, for exceptional performance in the following courses:
+                           \footnotesize{
+                                \begin{enumerate}
+                                    \item Computer, Internet and Network Security
+                                    \item Computer Networks
+                                    \item Computer Organization
+                                    \item Logic for Computer Science
+                                    \item Fundamentals of Computing
+                                    \item Introduction to Philosophy
+                                \end{enumerate}
+                            }\\
     \textsc{2012-2013}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{2011-2012}   & \textbf{Academic Excellence Award}, IIT Kanpur. \\
     \textsc{Fall 2012}   & \textbf{Academic Mentor}, \textbf{Fundamentals of Computer Science (ESC101)}. \\
@@ -380,7 +391,7 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                        \end{itemize}
                    }\\
 
-    2013-2014    & \textbf{Volunteer, English Proficiency Programme}
+                   2013-2014    & \textbf{Volunteer, English Proficiency Programme (Community Service)}
                    \footnotesize{
                        \begin{itemize}[leftmargin=*]
                            \item A brainchild of \textbf{Professor Bhaskardas Gupta}, English Proficiency
