Decreased the font size

--- a/cv.tex
+++ b/cv.tex
@@ -65,8 +65,8 @@ I-308, IIT Kanpur {\large\textperiodcentered} Kanpur {\large\textperiodcentered}
 % HEADER SECTION
 %----------------------------------------------------------------------------------------
 
-{\centering
-    {\addfontfeature{LetterSpace=20.0}\fontsize{36}{36}\selectfont\scshape
+{
+    {\addfontfeature{LetterSpace=20.0}\fontsize{24}{24}\selectfont\scshape
     Srijan R. Shetty}\\
 }
 
@@ -397,8 +397,16 @@ Programming Languages, Distributed Systems, Systems and Security, Web-Dev, NLP
                        \end{itemize}
                    }\\
 
-    2014 & \textbf{Head, Major Events and Competitions, Antaragni'14} , the annual cultural festival of
-    IIT Kanpur. \\
+    2014 & \textbf{Head, Major Events and Competitions, Antaragni'14}
+           \footnotesize{
+               \begin{itemize}[leftmargin=*]
+                   \item Oversaw a team of \textbf{150} students for a span of 8 months.
+                   \item Chalked out the logistics for the hospitality and accommodation of \textbf{1500 students} who
+                       participated in festival.
+                   \item Made sure everything went smoothly during the four days of the Festival from 24$^{th}$
+                       to 27$^{th}$ October.
+               \end{itemize}
+           }\\
 
     2013 & \textbf{Hospitality Coordinator, Antaragni ‘13}
            \footnotesize{
